--- a/Proyecto1/storage/assets/css/vistaGlobal.css
+++ b/Proyecto1/storage/assets/css/vistaGlobal.css
@@ -120,6 +120,53 @@ svg {
     justify-self: start;
 }
 
+/*==================================================
+            CSS de creación de grupos
+==================================================*/
+.contenedorPrincipal{
+    height: 500px;
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 1px solid black
+}
+
+.contenedorSecundario{
+    width: 100%; 
+    height: 10%;  
+    display: flex; 
+    align-items: center; 
+    justify-content: start;    
+    border: 1px solid green
+}
+
+.subContenedorSinMargen{
+    display: flex; 
+    flex-direction: column; 
+    margin-inline: 5%; 
+}
+
+.contenedorBotonDesplegable{
+    width: 100%; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+}
+
+.contenedorBotonFinal{
+    display: flex; 
+    flex-direction: column; 
+    margin-inline: 5%; 
+    align-items: end; 
+    justify-content: end;
+}
+
+.contenedorScroll {
+    overflow-y: auto;
+    scrollbar-width: none;
+}
+
 @media (width < 600px) {
     #grid-container {
         display: flex;
