--- a/Proyecto1/storage/assets/css/project.css
+++ b/Proyecto1/storage/assets/css/project.css
@@ -22,7 +22,7 @@ main {
 /*  SELECT PROYECTOS    */
 #select-container {
     display: flex;
-    gap: 20px;
+    flex-wrap: wrap;
     gap: 20px;
 }
 
@@ -37,11 +37,15 @@ main {
 #select-container > a:hover {
     color: var(--color-link-hover);
 }
-
+#select-container > * {
+    flex: 1 1 auto;
+    min-width: 200px;
+}
 #update-project {
     margin-left: auto;
     background-color: var(--color-primary);
-    padding: 10px 25px;
+    padding: 10px 20px;
+    max-width: 200px;
     border-radius: 10px;
 
     transition: all 400ms;
@@ -283,7 +287,7 @@ option:hover {
 }
 
 .task-backlog:hover {
-    background-color: rgb(221, 221, 221);
+    background-color: rgb(252, 252, 252);
 }
 
 .task-backlog span {
@@ -361,6 +365,149 @@ option:hover {
     display: grid;
 }
 
+/* UPDATE FORM PROJECT */
+form {
+    box-sizing: border-box;
+    padding: 20px;
+
+    border: 1px solid var(--color-dark);
+    border-radius: 10px;
+
+    height: auto;
+    width: 100%;
+    max-width: 800px;
+
+    display: flex;
+    flex-direction: column;
+    font-family: "Lato";
+
+    position: relative;
+}
+
+#quit-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 25px;
+    height: 25px;
+
+    background-color: var(--color-dark);
+    color: var(--color-white);
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px 10px;
+    font-size: 0.8rem;
+}
+
+form > div {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    height: 100%;
+}
+
+form > div input {
+    margin-bottom: 25px;
+}
+
+#titulo {
+    background: var(--color-background) !important;
+    font-size: 2rem;
+    font-family: "Zilla Slab", serif;
+    font-weight: 600;
+    border-bottom: 2px solid var(--color-primary);
+
+    transition: all 400ms;
+}
+
+#titulo::selection {
+    background: var(--color-primary);
+}
+
+#titulo:hover,
+#titulo:focus,
+#titulo:active {
+    border: none;
+    outline: none;
+    box-shadow: none;
+    border-bottom: 2px solid var(--color-primary);
+}
+
+input {
+    box-sizing: border-box;
+    padding: 10px !important;
+
+    transition: all 400ms;
+}
+
+form > div > label:first-child {
+    margin-top: 15px;
+}
+
+form > div > label:first-child,
+form > div > label:nth-child(3) {
+    margin-bottom: 10px;
+}
+
+#fecha-limite,
+#descripcion,
+#link,
+#presupuesto {
+    border: 2px solid transparent;
+    color: #9ca3af;
+}
+
+#fecha-limite:is(:hover, :active, :focus),
+#descripcion:is(:hover, :active, :focus),
+#link:is(:hover, :active, :focus),
+#presupuesto:is(:hover, :active, :focus) {
+    outline: none;
+    box-shadow: none;
+    border: 2px solid var(--color-primary);
+}
+
+form button,
+input[type="submit"] {
+    background: var(--color-primary);
+    border-radius: 7px;
+    padding: 5px 15px;
+    cursor: pointer;
+    width: max-content;
+
+    transition: all 400ms;
+}
+
+form button:hover,
+input[type="submit"]:hover {
+    background-color: var(--color-primary-hover);
+}
+
+form > div > div:nth-child(2) > a {
+    width: max-content;
+}
+
+/* UPDATE $ DELETE PROJECT BUTTON */
+form > div > div {
+    display: flex;
+    height: auto;
+    flex-wrap: wrap;
+}
+
+#delete-project {
+    background-color: rgb(209, 0, 0);
+    color: var(--color-white);
+    padding: 10px 20px;
+    margin-top: auto;
+}
+
+#update-proyecto-btn {
+    margin: auto 0 0 auto;
+    padding: 10px 20px;
+}
+
 /* MEDIA QUERIES */
 @media (width < 700px) {
     #sprints {
@@ -368,14 +515,29 @@ option:hover {
         margin: 20px auto 0 0;
         height: 40px;
     }
+
+    form {
+        margin: 10px 0 0 0;
+        border: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    form > div {
+        grid-template-columns: 1fr;
+    }
 }
 
-@media (width < 400px) {
+@media (width < 450px) {
     main {
         padding: 10px;
     }
 
     .task-backlog span {
         font-size: 0.7rem;
+    }
+
+    form > div > div {
+        font-size: 0.8rem;
     }
 }
