--- a/Proyecto1/storage/assets/css/project.css
+++ b/Proyecto1/storage/assets/css/project.css
@@ -27,6 +27,7 @@ main {
 }
 
 #select-container > a {
+    width: max-content;
     margin-top: auto;
     margin-bottom: auto;
 
@@ -416,7 +417,7 @@ form > div input {
 #titulo {
     background: var(--color-background) !important;
     font-size: 2rem;
-    font-family: "Zilla Slab", serif;
+    font-family: "Lato", serif;
     font-weight: 600;
     border-bottom: 2px solid var(--color-primary);
 
@@ -490,6 +491,27 @@ form > div > div:nth-child(2) > a {
 }
 
 /* UPDATE $ DELETE PROJECT BUTTON */
+#popup-update-project,
+#popup-delete-project-confirmation {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000b2;
+
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+#update-project-form {
+    background-color: var(--color-background);
+    border: 1px solid black;
+}
+
 form > div > div {
     display: flex;
     height: auto;
@@ -508,6 +530,33 @@ form > div > div {
     padding: 10px 20px;
 }
 
+/* DELETE PROJECT CONFIRMATION*/
+#form-delete-project {
+    background-color: var(--color-background);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    max-width: 400px;
+    text-align: center;
+    gap: 20px;
+}
+
+#form-delete-project span {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+
+#form-delete-project input,
+#form-delete-project button {
+    padding: 10px 20px;
+}
+
+#form-delete-project input {
+    color: var(--color-white);
+    background-color: #d42d20;
+}
 /* MEDIA QUERIES */
 @media (width < 700px) {
     #sprints {
