--- a/Proyecto1/storage/assets/css/project.css
+++ b/Proyecto1/storage/assets/css/project.css
@@ -230,6 +230,28 @@ option:hover {
     display: grid;
 }
 
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none; /* Inicialmente oculto */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 600px;
+    position: relative;
+}
+
 /* MEDIA QUERIES */
 @media (width < 700px) {
     #sprints {
